# minecraft-carve

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  dump_unused_blocks.cpp  mcarve-config.cpp  mcarve-config.hpp  mcarve-pass1.cpp  mcarve.cpp
include/: ext2filesystem.hpp  nbt.h  nbt.hpp  pass1config.hpp  sector.hpp
minecraft-carve/: BlockReader.hpp  CMakeLists.txt  ext2filesystem.cpp  ext2filesystem.hpp  sector.cpp  sector.hpp
source/: ext2filesystem.cpp  nbt.cpp  pass1config.cpp  sector.cpp
